# Anterle

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  xmake.lua
cmake/: StaticAnalyzers.cmake
dmsl/: CMakeLists.txt
dmsl/include/: vector.hpp
dmsl/src/: vector.cpp
engine/: CMakeLists.txt  xmake.lua
engine/assets/shaders/: clickable.vert  text.frag  text.vert
engine/binding/vectors/: vec2.toml  vec3.toml  vec4.toml
engine/include/: anterle_engine.hpp  game.hpp  logger.hpp  stb_image.hpp  utils.hpp  window.hpp
engine/include/audio/: audio_system.hpp  auidio_server.hpp
engine/include/backend/: base.hpp  directx.hpp  vulkan.hpp
engine/include/component/: component.hpp  sprite.hpp
engine/include/debug/: profiler.hpp
engine/include/helper/: error.hpp  file.hpp  imgui.hpp  vulkan.hpp
engine/include/imgui/: IconsFontAwesome6.hpp  imgui_impl_glfw.hpp  imgui_impl_opengl3.hpp  notify.hpp  plot_var.hpp
engine/include/object/: component.hpp  game_level.hpp  game_object.hpp  object.hpp  particle_generator.hpp  scene.hpp
engine/include/object/ui/: IconsFontAwesome6.hpp  button.hpp  check_box.hpp  clickable.hpp  notify.hpp  switch.hpp
engine/include/render/: sprite_renderer.hpp  text_renderer.hpp
engine/include/render/msdfgl/: msdfgl.hpp  msdfgl_map.hpp  msdfgl_serializer.hpp
engine/include/renderer/: backend.hpp  settings.hpp  types.hpp
engine/include/resource/: audio.hpp  resource_manager.hpp  shader.hpp  texture.hpp  time.hpp
engine/include/scripting/: script_manager.hpp
engine/include/scripting/glm/: vector.hpp
engine/include/stb/: stb_image.hpp
engine/include/utility/: screen.hpp
engine/resources/shader/: base.frag.spv  base.vert.spv
engine/resources/shaders/: clickable.frag  clickable.vert  particle.frag  particle.vert  sprite.frag  sprite.vert  text.frag  text.vert
engine/src/: game.cpp  logger.cpp  utils.cpp  window.cpp
engine/src/audio/: audio_system.cpp  auidio_server.cpp
engine/src/backend/: base.cpp  directx.cpp  vulkan.cpp
engine/src/component/: component.cpp  sprite.cpp
engine/src/debug/: profiler.cpp
engine/src/helper/: error.cpp  file.cpp  imgui.cpp  vulkan.cpp
engine/src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  notify.cpp  plot_var.cpp
engine/src/object/: component.cpp  game_level.cpp  game_object.cpp  object.cpp  particle_generator.cpp  scene.cpp
engine/src/object/ui/: button.cpp  check_box.cpp  clickable.cpp  notify.cpp  switch.cpp
engine/src/render/: sprite_renderer.cpp  text_renderer.cpp
engine/src/render/msdfgl/: msdfgl.cpp  msdfgl_map.cpp  msdfgl_serializer.cpp
engine/src/renderer/: backend.cpp
engine/src/resource/: audio.cpp  resource_manager.cpp  shader.cpp  texture.cpp  time.cpp
engine/src/scripting/: scripting_manager.cpp
engine/src/scripting/glm/: vector.cpp
engine/src/utility/: screen.cpp
game/: CMakeLists.txt  xmake.lua
game/include/: AnterleGame.hpp  AnterleWindow.hpp  game.hpp
game/resources/levels/: one.lvl
game/resources/shaders/: font.frag  font.geom  font.vert  msdf.frag  msdf.vert  particle.vert  sprite.vert
game/src/: AnterleGame.cpp  AnterleWindow.cpp  game.cpp  main.cpp
include/: fontstash.hpp  fpng.hpp  game.hpp  game_level.hpp  game_object.hpp  glfontstash.hpp  particle_generator.hpp  profiler.hpp  shader.hpp  sprite_renderer.hpp  stb_image.hpp  text_renderer.hpp
include/debug/: profiler.hpp
include/imgui/: imgui_impl_glfw.hpp  imgui_impl_opengl3.hpp  imgui_impl_opengl3_loader.hpp  plot_var.hpp
include/object/: game_level.hpp  game_object.hpp  particle_generator.hpp
include/render/: sprite_renderer.hpp  text_renderer.hpp
include/resource/: resource_manager.hpp  shader.hpp  texture.hpp
resources/levels/: one.lvl
src/: fpng.cpp  game.cpp  game_level.cpp  game_object.cpp  main.cpp  particle_generator.cpp  profiler.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  text_renderer.cpp  texture.cpp
src/debug/: profiler.cpp
src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  plot_var.cpp
src/object/: game_level.cpp  game_object.cpp  particle_generator.cpp
src/render/: sprite_renderer.cpp  text_renderer.cpp
src/resource/: resource_manager.cpp  shader.cpp  texture.cpp
tool/: CMakeLists.txt  xmake.lua
tool/include/type/: image.hpp  lua_bind.hpp  shader.hpp
tool/src/: main.cpp
tool/src/type/: image.cpp  lua_bind.cpp  shader.cpp
